force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>this field is populated initially by the ID from war. Going forward Salesforce will generate this number on the account</description>
    <displayFormat>5{0000000}</displayFormat>
    <label>Account ID</label>
    <type>AutoNumber</type>
</CustomField>