force-app/main/default/objects/Account/fields/AccountCreateDateFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountCreateDateFormula__c</fullName>
    <formula>IF( CreatedDate &gt;   DATETIMEVALUE(&quot;2018-01-01 00:00:00&quot;)  , &quot;1&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountCreateDateFormula</label>
    <type>Text</type>
</CustomField>