force-app/main/default/objects/Account/fields/Accounting_Software__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Software__c</fullName>
    <label>Accounting Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accpac</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>Blackbaud</fullName>
            </value>
            <value>
                <fullName>Deltek</fullName>
            </value>
            <value>
                <fullName>Epicor</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>MAS200</fullName>
            </value>
            <value>
                <fullName>MAS500</fullName>
            </value>
            <value>
                <fullName>MAS90</fullName>
            </value>
            <value>
                <fullName>Master Builder</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>MIP</fullName>
            </value>
            <value>
                <fullName>Navision</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle Financials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peachtree</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Quickbooks Online</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SAP Business One</fullName>
            </value>
            <value>
                <fullName>Simply Accounting</fullName>
            </value>
            <value>
                <fullName>Solomon</fullName>
            </value>
            <value>
                <fullName>Timberline</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>