force-app/main/default/objects/Account/fields/AccountSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>AccountSalesOrg__c</fullName>
    <inlineHelpText>Which Sales Org is this account associated with?</inlineHelpText>
    <label>Account Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>