force-app/main/default/objects/Account/fields/Active_Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales_Play__c</fullName>
    <description>APR0164264</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Sales Play</label>
    <length>150</length>
    <type>Text</type>
</CustomField>