force-app/main/default/objects/Account/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>Will be populated by a daily Demand Tools process. Used for Preview to Flex Migration. case 21207207 
Date of last activity in migration process

6/22/18 Retiring demandtools process for SOAP integration, FFSService.cls</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>