force-app/main/default/objects/Account/fields/agentsync__AgentSync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>agentsync__AgentSync_Attempt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIPR Attempt</label>
    <type>DateTime</type>
</CustomField>