force-app/main/default/objects/Account/fields/agentsync__AgentSync_Producer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>agentsync__AgentSync_Producer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To create a producer assignment, you may either use the &quot;Create New Producer or by clicking the &quot;New&quot; button on the Producer Assignment list view.</inlineHelpText>
    <label>AgentSync Producer Assignment</label>
    <referenceTo>agentsync__Producer_Assignment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>