force-app/main/default/objects/Account/fields/agentsync__FINRA_Registration_Credential__c.field-meta.xml
<CustomField>
    <fullName>agentsync__FINRA_Registration_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FINRA Registration Credential</label>
    <referenceTo>agentsync__FINRA_Registration_Credential__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>