force-app/main/default/objects/Account/fields/amp_dev__Amp_Partner__c.field-meta.xml
<CustomField>
    <fullName>amp_dev__Amp_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amp Partner</label>
    <referenceTo>amp_dev__Amp_Partner__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>