force-app/main/default/objects/Account/fields/Amplifinity_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Amplifinity_Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amplifinity Advocate</label>
    <referenceTo>amp_dev__Amp_Advocate__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>