force-app/main/default/objects/Account/fields/AssignedToInboundNSR__c.field-meta.xml
<CustomField>
    <fullName>AssignedToInboundNSR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this assigned to an inbound NSR?</inlineHelpText>
    <label>Assigned To Inbound NSR</label>
    <type>Checkbox</type>
</CustomField>