force-app/main/default/objects/Account/fields/AssignedToNSR__c.field-meta.xml
<CustomField>
    <fullName>AssignedToNSR__c</fullName>
    <formula>IF ((AssignedToInboundNSR__c || AssignedToOutboundNSR__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this assigned to an NSR (inbound or outbound)?</inlineHelpText>
    <label>Assigned To NSR</label>
    <type>Checkbox</type>
</CustomField>