force-app/main/default/objects/Account/fields/AssignedToOutboundNSR__c.field-meta.xml
<CustomField>
    <fullName>AssignedToOutboundNSR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this assigned to an outbound NSR?</inlineHelpText>
    <label>Assigned To Outbound NSR</label>
    <type>Checkbox</type>
</CustomField>