force-app/main/default/objects/Account/fields/ATS_Current_Prior_Method__c.field-meta.xml
<CustomField>
    <fullName>ATS_Current_Prior_Method__c</fullName>
    <inlineHelpText>ATS stands for Applicant Tracking System</inlineHelpText>
    <label>ATS Current-Prior Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Brassring</fullName>
            </value>
            <value>
                <fullName>Bullhorn</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>HireDesk</fullName>
            </value>
            <value>
                <fullName>Hireology for ATS</fullName>
            </value>
            <value>
                <fullName>Hodes IQ</fullName>
            </value>
            <value>
                <fullName>HRLogix</fullName>
            </value>
            <value>
                <fullName>HRSmart</fullName>
            </value>
            <value>
                <fullName>iCims</fullName>
            </value>
            <value>
                <fullName>JazzHR</fullName>
            </value>
            <value>
                <fullName>JobPartner</fullName>
            </value>
            <value>
                <fullName>JobPlanet</fullName>
            </value>
            <value>
                <fullName>JobScience</fullName>
            </value>
            <value>
                <fullName>JobVite</fullName>
            </value>
            <value>
                <fullName>Kenexa</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>Mr. Ted</fullName>
            </value>
            <value>
                <fullName>myStaffingPro</fullName>
            </value>
            <value>
                <fullName>NEOGOV</fullName>
            </value>
            <value>
                <fullName>NowHire</fullName>
            </value>
            <value>
                <fullName>OpenHire</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>PCRecruiter</fullName>
            </value>
            <value>
                <fullName>PeopleAdmin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>