force-app/main/default/objects/Account/fields/Bank_Centric_Rep__c.field-meta.xml
<CustomField>
    <fullName>Bank_Centric_Rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Centric Rep</label>
    <length>18</length>
    <type>Text</type>
</CustomField>