force-app/main/default/objects/Account/fields/Banker_Name_Ref__c.field-meta.xml
<CustomField>
    <fullName>Banker_Name_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Banker Relationship</description>
    <label>Banker Full Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Contact__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search results exclude records with an end date.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Banker-Mutual Clients</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>