force-app/main/default/objects/Account/fields/BenAdmin_Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>BenAdmin_Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BenAdmin Hold Out</label>
    <type>Checkbox</type>
</CustomField>