force-app/main/default/objects/Account/fields/BenAdmin_Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>BenAdmin_Hold_Out_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BenAdmin Hold Out Expiration</label>
    <type>Date</type>
</CustomField>