force-app/main/default/objects/Account/fields/BenAdmin_Hold_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>BenAdmin_Hold_Out_Reason__c</fullName>
    <label>BenAdmin Hold Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Centric Team</fullName>
            </value>
            <value>
                <fullName>CPA Centric Team</fullName>
            </value>
            <value>
                <fullName>DNC Protected</fullName>
            </value>
            <value>
                <fullName>Field Account Managed</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Team</fullName>
            </value>
            <value>
                <fullName>IA Centric Team</fullName>
            </value>
            <value>
                <fullName>International Zip</fullName>
            </value>
            <value>
                <fullName>Market Segmentation Policy</fullName>
            </value>
            <value>
                <fullName>Multi-ID Child Record</fullName>
            </value>
            <value>
                <fullName>National Account Team</fullName>
            </value>
            <value>
                <fullName>PO Box Exception</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Shared Zip</fullName>
            </value>
            <value>
                <fullName>Strategic Account Team</fullName>
            </value>
            <value>
                <fullName>Territory Exception</fullName>
            </value>
            <value>
                <fullName>VS Account Managed</fullName>
            </value>
            <value>
                <fullName>SurePayroll HR Sale</fullName>
            </value>
            <value>
                <fullName>Crossover Request</fullName>
            </value>
            <value>
                <fullName>SurePayroll ERTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>