force-app/main/default/objects/Account/fields/Benefits_Administration__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Administration__c</fullName>
    <description>This field is used to indicate which products and services a Prospect-Client uses.</description>
    <label>Benefits Administration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BeneTrac</fullName>
            </value>
            <value>
                <fullName>Flex BenAdmin</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>