force-app/main/default/objects/Account/fields/Benetrac_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Benetrac_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benetrac Indicator</label>
    <type>Checkbox</type>
</CustomField>