force-app/main/default/objects/Account/fields/BeneTrac_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>BeneTrac_Site_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BeneTrac Site ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>