force-app/main/default/objects/Account/fields/Bis_ID__c.field-meta.xml
<CustomField>
    <fullName>Bis_ID__c</fullName>
    <description>Business ID from HRIS system
Field fed into Oracle Analytics (OBIEE) system nightly.</description>
    <externalId>true</externalId>
    <label>BIS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>