force-app/main/default/objects/Account/fields/Broker_Clearing_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Clearing_Firm_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Clearing Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>