force-app/main/default/objects/Account/fields/Broker_Name_Ref__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Broker Relationship</description>
    <inlineHelpText>This is the Financial Advisor Broker Name.</inlineHelpText>
    <label>Financial Broker Full Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Contact__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search results exclude records with an end date.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Broker-Mutual Clients</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>