force-app/main/default/objects/Account/fields/Brokerage_Firm__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Firm__c</fullName>
    <formula>Broker_Name_Ref__r.Referral_Account__r.Name</formula>
    <inlineHelpText>This is the Financial Advisor Brokerage Firm.</inlineHelpText>
    <label>Brokerage Firm</label>
    <type>Text</type>
</CustomField>