force-app/main/default/objects/Account/fields/Call_Counter_Reset_WF_Set__c.field-meta.xml
<CustomField>
    <fullName>Call_Counter_Reset_WF_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Counter Reset WF Set</label>
    <type>Checkbox</type>
</CustomField>