force-app/main/default/objects/Account/fields/Certified_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Certified_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is used to indicate if the Prospect-Client already uses this product.</description>
    <label>Certified Payroll</label>
    <type>Checkbox</type>
</CustomField>