force-app/main/default/objects/Account/fields/Child_Assets__c.field-meta.xml
<CustomField>
    <fullName>Child_Assets__c</fullName>
    <description>roll up summary of Account Junction child assets</description>
    <inlineHelpText>total of all child assets</inlineHelpText>
    <label>Child Assets</label>
    <summarizedField>Account_Junction__c.Assets__c</summarizedField>
    <summaryFilterItems>
        <field>Account_Junction__c.SalesParentChild__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Junction__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>