force-app/main/default/objects/Account/fields/Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Count__c</fullName>
    <description>count of children linked to this account</description>
    <inlineHelpText>number of children linked</inlineHelpText>
    <label>Child Count</label>
    <summaryFilterItems>
        <field>Account_Junction__c.SalesParentChild__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Junction__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>