force-app/main/default/objects/Account/fields/Child_Employees__c.field-meta.xml
<CustomField>
    <fullName>Child_Employees__c</fullName>
    <description>roll up of Account Junction child records Employees</description>
    <inlineHelpText>total of all child employees</inlineHelpText>
    <label>Child Employees</label>
    <summarizedField>Account_Junction__c.Employees__c</summarizedField>
    <summaryFilterItems>
        <field>Account_Junction__c.SalesParentChild__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Junction__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>