force-app/main/default/objects/Account/fields/Clear_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Clear_Sales_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will clear all sales roles from prospect-client team</description>
    <inlineHelpText>Checking this box will clear all sales roles from prospect-client team</inlineHelpText>
    <label>Clear Sales Team</label>
    <type>Checkbox</type>
</CustomField>