force-app/main/default/objects/Account/fields/Client_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Client_Operating_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Operating System</label>
    <length>2</length>
    <type>Text</type>
</CustomField>