force-app/main/default/objects/Account/fields/Client_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first payroll start date we get from a client. This is not updated if the date changes, but this is cleared out if the client goes lost.</inlineHelpText>
    <label>Client Start Date</label>
    <type>Date</type>
</CustomField>