force-app/main/default/objects/Account/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>