force-app/main/default/objects/Account/fields/Clientfor6Months__c.field-meta.xml
<CustomField>
    <fullName>Clientfor6Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets set by batch job when record should be assigned to New 401k Current Client Micro Segment</description>
    <inlineHelpText>Indicates that a client has been running payroll for a certain amount of time (6 months or greater) and is available for separate payroll segmentation.</inlineHelpText>
    <label>Clientfor6Months</label>
    <type>Checkbox</type>
</CustomField>