force-app/main/default/objects/Account/fields/ClientRegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>ClientRegistrationStatus__c</fullName>
    <inlineHelpText>If it&apos;s possible for the rep to submit via CSO Eligible, that will be set. If the Opportunity ends up not being eligible, will fall back to Enterprise Eligible registration. If already registered, set to Enterprise Client</inlineHelpText>
    <label>Client Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSO Eligible</fullName>
            </value>
            <value>
                <fullName>Enterprise Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Enterprise Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>