force-app/main/default/objects/Account/fields/Cobra__c.field-meta.xml
<CustomField>
    <fullName>Cobra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If client has Cobra product</description>
    <label>COBRA</label>
    <type>Checkbox</type>
</CustomField>