force-app/main/default/objects/Account/fields/Combo_Client__c.field-meta.xml
<CustomField>
    <fullName>Combo_Client__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This client is part of a consolidation and this is the Combo Client ID that is reported to Taxpay.</inlineHelpText>
    <label>Combo Client #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>