force-app/main/default/objects/Account/fields/Common_Remitter_Participation__c.field-meta.xml
<CustomField>
    <fullName>Common_Remitter_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Remitter Participation</label>
    <type>Checkbox</type>
</CustomField>