force-app/main/default/objects/Account/fields/Contact_Email_Available__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Prospect-Client has at least 1 associated Contact with an Email address. If none of the associated contacts has an email address populated, this field will be unchecked. This field is maintained by an Apex trigger.</description>
    <inlineHelpText>Indicates the Prospect-Client has at least 1 associated Contact with an Email address.</inlineHelpText>
    <label>Contact Email Available</label>
    <type>Checkbox</type>
</CustomField>