force-app/main/default/objects/Account/fields/ContactStages__c.field-meta.xml
<CustomField>
    <fullName>ContactStages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>All of the different stages the contacts are currently in.</inlineHelpText>
    <label>Contact Stages</label>
    <length>120</length>
    <type>Text</type>
</CustomField>