force-app/main/default/objects/Account/fields/Core_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Core_Start_Date__c</fullName>
    <description>The HRIS nightly feed will take the first payroll run date and the branch # into account.  If the branch # is not in the 400s (Core), it will copy the First Run Date into this field.  Note: This is for Core Advanced and Flex only.  It uses the branch # to determine whether to use the Core date or MMS date. Branch # in the 400s = MMS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Core Start Date</label>
    <type>Date</type>
</CustomField>