force-app/main/default/objects/Account/fields/Create_Junction__c.field-meta.xml
<CustomField>
    <fullName>Create_Junction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in initial run to create Account Junction object if Sales Parent is already set on Account.</description>
    <inlineHelpText>Here for testing only, will not be on page layouts in production.</inlineHelpText>
    <label>Create Junction</label>
    <type>Checkbox</type>
</CustomField>