force-app/main/default/objects/Account/fields/CreatedByProcess__c.field-meta.xml
<CustomField>
    <fullName>CreatedByProcess__c</fullName>
    <inlineHelpText>Which process created this record</inlineHelpText>
    <label>Created By Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>