force-app/main/default/objects/Account/fields/Credit_Card_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Sensitivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by OpptyChkReferral if a bank opportunity is created</description>
    <label>Credit Card Sensitivity</label>
    <type>Checkbox</type>
</CustomField>