force-app/main/default/objects/Account/fields/CSCMContractStatus__c.field-meta.xml
<CustomField>
    <fullName>CSCMContractStatus__c</fullName>
    <defaultValue>&quot;Prospect&quot;</defaultValue>
    <inlineHelpText>ClientSpace Client Master Contract Status</inlineHelpText>
    <label>CS CM Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>ContractPending</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>PendingActivation</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>PendingTermination</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>UnderContract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>